documentation, simplify dependencies